[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Actors/Player/ThwackArea.gd" type="Script" id=1]
[ext_resource path="res://assets/thwack.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "thwack_fade"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ThwackSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0507901, 0.0998248 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.100896 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="ThwackArea" type="Area2D"]
collision_layer = 16
collision_mask = 38
script = ExtResource( 1 )

[node name="ThwackCollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -16, -12, -2, -12, 12, -8, 16, -2, 16, 2, 12, 8, -2, 12, -16, 12 )
disabled = true

[node name="ThwackSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )

[node name="ThwackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="ThwackAP" type="AnimationPlayer" parent="."]
anims/thwack_fade = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
